fixes top nav on mobile

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -168,7 +168,7 @@ header{
 			padding:30px 30px 10px 30px;
 			margin:0 auto;
 			@include mobile{
-				width:80%;
+				width:100%;
 
 			}
 		}
